Implement 010
